8214120: [REDO] Fix sun.awt.nativedebug on X11 platforms

Reviewed-by: stuefe, ihse